--- a/src/main/resources/templates/personas.html
+++ b/src/main/resources/templates/personas.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html> xmlns:th="http://www.thymeleaf.org">
+ <html xmlns:th= "http://www.thymeleaf.org">
     <head>
-        <title>Persona</title>
+        <title> Persona </title>
     </head>
     <body>
-        <h1>th:text="${titulo}"</h1>
-        <h1>th:text="${titulo}"</h1>
+        <h1 th:text= "${titulo}"></h1>
+     
        
         <table class="table table-dark table-striped">
           
@@ -22,23 +22,25 @@
                     <th scope="col">Editar </th>
                     <th scope="col"> Eliminar </th>
                 </tr>
+            </thead> 
             <tbody>
             <th:block th:each="user : ${personas}">
                 <tr>
                     <td th:text="${user.getNombre}"></td>
                     <td th:text="${user.getApellido1}"></td>
-                    <td th:text="${user.Apellido2}"></td>
-                    <td th:text="${user.getEmail}"></td
-                    <td th:text="${user.getTelefono}"></td>
+                    <td th:text="${user.Apellido2}"></td>   
+                    <td th:text="${user.getEmail}"></td>
+                    <td th:text="${user.getTelefono}"></td>                   
                     <td th:text="${user.getPais.getPais}"></td>
                     <td>
-                        <a th:href="@{/editPersona/{id(id=${user.getId})}">Edit</a>
+                        <a th:href="@{/editPersona/{id}(id=${user.getId})}">Edit</a>
                     </td>
                     <td>
-                        <a th:href="@{/delete/{id(id=${user.getId})}">Delete</a>
+                        <a th:href="@{/delete/{id}(id=${user.getId})}">Delete</a>
                     </td>
                 </tr>
             </th:block>
         </tbody>
+    </table>
 </body>
-</html>
+
