Semana 6/7 practica y examen

--- a/src/main/resources/templates/crear.html
+++ b/src/main/resources/templates/crear.html
@@ -19,7 +19,7 @@
                           method="POST"
                           >
 
-                        <!-- Thyme fiel para que se agregue al objesto de persona -->
+                        <!-- Thyme fiel para que se agregue al objeto de persona -->
                         <input type = "hidden" th:field="*{id}">
                         <div class="form-group mb-3 row">
                             <label class="col-md-2 col-form-label" for="nombre">Nombre</label>
