--- a/src/main/resources/templates/personas.html
+++ b/src/main/resources/templates/personas.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
  <html xmlns:th= "http://www.thymeleaf.org">
     <head>
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-        <title> Persona </title>
+         <head th:replace="plantilla/template::head"></head> 
+         <title> Persona </title>
     </head>
+    
     <body>
+
+    <header th:replace="plantilla/template::header"></header>
         <h1 th:text= "${titulo}"></h1>
-     
-       
+        
+        
         <table class="table table-dark table-striped">
-          
+           
             
             <thead class="thead-dark">
                 <tr>
@@ -45,5 +47,13 @@
             </th:block>
         </tbody>
     </table>
+        <Footer th:replace="plantilla/template::Footer"></Footer>
+        
+        <a th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}"
+           th:href="${urlBuilder.replaceQueryParam('lang','es').toUriString()}">ES<a>
+                
+                 <a th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}"
+           th:href="${urlBuilder.replaceQueryParam('lang','en').toUriString()}">EN<a>
 </body>
+
 
